# stock-stalker-bot

./: Cargo.toml  README.md  groww.json
.github/workflows/: ci.yml
src/: main.rs
