[package]
name = "stock-stalker-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
nse-quote = { git = "https://github.com/abhinandh-s/nse-quote", version = "0.1.100" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.1", features = [ "cookies", "json", "multipart", "rustls", "form"] }
